rspec verifiy codigo anfitrion
